@@ -1,4 +1,4 @@
-﻿/*
+/*
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
  *  You may obtain a copy of the License at 
@@ -13,18 +13,12 @@
  *  
  *  Copyright © 2020 Sebastian Ritter
  */
-
-using System;
-using java = biz.ritter.javapi;
+ using System;
 
 namespace biz.ritter.javapi.net
 {
-    [Serializable]
-    public class InetAddress : java.io.Serializable
+    public interface ContentHandlerFactory
     {
-        public static InetAddress getByName(String host)
-        {
-            throw new java.lang.UnsupportedOperationException("Not yet implemented");
-        }
+        ContentHandler createContentHandler (String mimetype);
     }
 }
